--- a/github-app/app/src/main/res/values/strings.xml
+++ b/github-app/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">github-app</string>
+    <string name="app_name">GithubApp</string>
+    <string name="app_list_users_title">Github Users</string>
+    <string name="app_detail_user_title">Detail User</string>
 </resources>
