--- a/github-app/app/src/main/res/values/strings.xml
+++ b/github-app/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">GithubApp</string>
-    <string name="app_list_users_title">Github Users</string>
-    <string name="app_detail_user_title">Detail User</string>
+    <string name="user_list_title">User list</string>
+    <string name="user_detail_title">User detail</string>
 </resources>
